[package]
name = "solve"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
deadpool = "0.10.0"
deadpool-postgres = "0.11.0"
futures-util = "0.3.30"
gtmpl = "0.7.1"
path-clean = "1.0.1"
rand = "0.8.5"
rustls = "0.21.9"
sbox = "0.1.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tokio-postgres-rustls = "0.10.0"
tokio-sqlite = "0.1.4"
tokio-util = "0.7.10"
warp = "0.3.6"
solve-db = { path = "lib/solve-db" }
solve-db-derive = { path = "lib/solve-db-derive" }
solve-db-types = { path = "lib/solve-db-types" }
solve-cache = { path = "lib/solve-cache" }
hashing-reader = "0.1.0"
md-5 = "0.10.6"
sha3 = "0.10.8"
